--- a/style.css
+++ b/style.css
@@ -115,10 +115,6 @@ footer {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
-    transition: transform 0.3s ease;
-}
-.modal-content img:hover {
-    transform: scale(1.05);
 }
 .close-btn {
     position: absolute;
@@ -132,11 +128,18 @@ footer {
 .close-btn:hover {
     color: #f0a500;
 }
-
-/* Grid for Multiple Certificates */
-.cert-images-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+/* Modal for PDFs */
+.cert-pdf-container {
+    display: flex;
+    flex-direction: column;
     gap: 1em;
     padding: 1em;
+    max-width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+.cert-pdf-container iframe {
+    width: 100%;
+    height: 500px; /* Adjust height as needed */
+    border: none;
 }
